--- a/home.html
+++ b/home.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>kohl's</title>
+    <title>
+      Kohl's | Shop Clothing, Shoes, Home, Kitchen, Bedding, Toys & More
+    </title>
+    <link rel="icon" href="./images/favicon.ico" type="image/x-icon" />
   </head>
   <body>
-    <h1>Land Page</h1>
+    <h1>Landing Page</h1>
   </body>
 </html>
