--- a/home.html
+++ b/home.html
@@ -8,8 +8,73 @@
       Kohl's | Shop Clothing, Shoes, Home, Kitchen, Bedding, Toys & More
     </title>
     <link rel="icon" href="./images/favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="./home.css" type="text/css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
   </head>
   <body>
-    <h1>Landing Page</h1>
+    <div id="banner">
+      <div id="banner_div">
+        <a href="#kohls" class="banner_link">
+          <b>Free shipping</b>
+          with $75 purchase.
+          <span>details</span>
+        </a>
+        <a href="#kohls" class="banner_link">
+          <b> Fast & free </b>
+          store pickup!
+          <span>details</span>
+        </a>
+        <a href="#kohls" class="banner_link">
+          <b>Take $10 off $50</b>
+          with code GET10 .
+          <span>details</span>
+        </a>
+      </div>
+    </div>
+    <div id="fixed_navbar">
+      <div id="navbar_left">
+        <div id="kohls_logo">
+          <a href="./home.html"
+            ><svg
+              role="img"
+              focusable="false"
+              overflow="visible"
+              preserveAspectRatio="none"
+              viewBox="0 0 122 20"
+              height="22"
+              width="147"
+            >
+              <g transform="translate(1 1)">
+                <path
+                  d="M0 .441h8.193v5.483h.063L14.527.441h9.202l-7.563 6.712 8.729 9.234H14.527l-6.27-6.524h-.064v6.524H0V.44zM36.775 0c9.328 0 11.849 1.922 11.849 8.445 0 6.523-2.521 8.446-11.849 8.446-9.328.031-11.88-1.891-11.88-8.446C24.895 1.922 27.447 0 36.775 0zm0 13.613c3.656 0 3.404-4.002 3.404-5.325 0-1.324.031-4.98-3.404-4.98s-3.403 3.656-3.403 4.98c-.032 1.323-.252 5.325 3.403 5.325zM66.303 10.4h-6.05v6.082h-8.415V.536h8.414v5.483h6.05V.536h8.414V16.48h-8.413V10.4zM78.718.536h8.635v12.132s6.87.032 7.784.032c.913 0 1.45-.82 1.45-.82v4.57H78.717V.536zm37.973 5.294c-1.796-1.418-3.309-1.86-4.947-1.89-1.607-.032-3.089.535-3.089 1.48 0 .756 1.103 1.072 4.948 1.86 3.151.661 5.263 2.237 5.263 5.167 0 3.31-5.641 5.2-10.652 5.2-3.53 0-6.24-.63-8.666-1.702v-4.474c1.513 1.544 4.853 2.363 7.437 2.363 1.418 0 2.143-.22 2.143-1.323 0-.694-.882-1.324-3.592-1.797-5.105-.914-6.839-2.363-6.839-4.821 0-3.53 4.475-5.61 9.958-5.61 2.963 0 5.673.095 8.068 1.198V5.83h-.032zM91.796 7.059l.599-1.009c-1.765-.85-2.3-3.056-1.387-4.317.977-1.355 3.656-1.922 5.137.158 1.229 1.764.063 3.277-.473 3.718-.598.41-3.876 1.45-3.876 1.45zm27.637-5.01c0 .598-.473 1.04-1.04 1.04-.599 0-1.04-.473-1.04-1.04 0-.6.473-1.04 1.04-1.04.567 0 1.04.44 1.04 1.04zm-1.954 0c0 .504.378.913.882.913.505 0 .883-.41.883-.914s-.378-.914-.883-.914c-.504.032-.882.41-.882.914zm.662.63h-.158v-1.23h.473c.283 0 .41.127.41.347 0 .22-.158.315-.316.347l.379.536h-.19l-.346-.536h-.252v.536zm.189-.694c.189 0 .378 0 .378-.22 0-.158-.126-.22-.284-.22h-.283v.409h.189v.031z"
+                  vector-effect="non-scaling-stroke"
+                  fill="#444"
+                  fill-rule="evenodd"
+                ></path>
+              </g>
+            </svg>
+          </a>
+        </div>
+        <form>
+          <fieldset>
+            <!-- <button type="submit"><i class="fa fa-search fa-1x"></i></button> -->
+            <button type="submit"><i class="fa fa-search fa-1x"></i></button>
+            <input
+              type="text"
+              placeholder=" what are you looking for today?"
+              id="search"
+            />
+          </fieldset>
+        </form>
+      </div>
+      <div id="navbar_right">
+        <div id="account" class="nav_right"></div>
+        <div id="cart" class="nav_right"></div>
+        <div id="check_out" class="nav_right"></div>
+      </div>
+    </div>
   </body>
 </html>
