--- a/Santhosh/kohls/cart_homepage.html
+++ b/Santhosh/kohls/cart_homepage.html
@@ -8,36 +8,53 @@
     <style>
         #container {
             width: 1000px;
-            height: 200px;
+            height: 210px;
             border: 1px solid red;
         }
 
         .right-side {
             background-color: white;
             width: 60%;
-            height: 100%;
+            height: 95%;
             border: 1px solid green;
         }
 
-        .ime {
-            width: ;
-        }
+        
         .right-right {
             width: 50%;
             height: 90%;
-            background-color: blue;
             display: block;
         }
+
+        .right-right p {
+            margin: 0px;
+        }
+
+        .right-right .productName {
+            font-size: 10px;
+        }
+
+        .pro-image {
+            width: 100px;
+            height: 70%;
+            background-color: blue;
+        }
+
+
+
     </style>
 </head>
 <body>
     <div id="container">
         <div class="right-side">
             <div class="right-right">
-                <div class="ime"></div>
+                <div class="pro-image"></div>
                 <p class="productName">Regular</p>
                 <p class="productPrice">$147.5</p>
+            <div class="left-image">
                 <img class = "cart-image"src="" alt="">
+                <p>V</p>
+            </div>
             </div>
             <div class="left-left">
                 <img src="" alt="">
