--- a/Santhosh/kohls/cart_homepage.html
+++ b/Santhosh/kohls/cart_homepage.html
@@ -24,6 +24,9 @@
             width: 50%;
             height: 90%;
             display: block;
+            padding-left: 15px;
+            padding-top: 15px;
+            border: 1px solid pink;
         }
 
         .right-right p {
@@ -51,9 +54,9 @@
                 <div class="pro-image"></div>
                 <p class="productName">Regular</p>
                 <p class="productPrice">$147.5</p>
-            <div class="left-image">
+            <div class="right-left">
                 <img class = "cart-image"src="" alt="">
-                <p>V</p>
+                <p></p>
             </div>
             </div>
             <div class="left-left">
