--- a/home.html
+++ b/home.html
@@ -9,12 +9,17 @@
     </title>
     <link rel="icon" href="./images/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="./home.css" type="text/css" />
+    <!-- font awesome cdn -->
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+      href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+      integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
+      crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
+    <!-- top banner -->
     <div id="banner">
       <div id="banner_div">
         <a href="#kohls" class="banner_link">
@@ -34,6 +39,7 @@
         </a>
       </div>
     </div>
+    <!-- persistent fixed navbar -->
     <div id="fixed_navbar">
       <div id="navbar_left">
         <div id="kohls_logo">
@@ -60,7 +66,6 @@
         </div>
         <form>
           <fieldset>
-            <!-- <button type="submit"><i class="fa fa-search fa-1x"></i></button> -->
             <button type="submit"><i class="fa fa-search fa-1x"></i></button>
             <input
               type="text"
@@ -71,10 +76,226 @@
         </form>
       </div>
       <div id="navbar_right">
-        <div id="account" class="nav_right"></div>
-        <div id="cart" class="nav_right"></div>
-        <div id="check_out" class="nav_right"></div>
+        <div id="check_out" class="nav_right">
+          <div class="inner_div">
+            <a href="#">
+              <svg
+                role="img"
+                focusable="false"
+                overflow="visible"
+                preserveAspectRatio="none"
+                viewBox="0 0 34 34"
+                height="32"
+                width="32"
+              >
+                <g transform="translate(1 1)">
+                  <path
+                    d="M21.232 17H9a1 1 0 0 1 0-2h11.839l-3.046-3.046a1 1 0 0 1 1.414-1.414l4.243 4.242a2 2 0 0 1 0 2.829l-4.243 4.243a1 1 0 0 1-1.414-1.415L21.233 17zM16 2C8.268 2 2 8.268 2 16s6.268 14 14 14 14-6.268 14-14S23.732 2 16 2zm0-2c8.837 0 16 7.163 16 16s-7.163 16-16 16S0 24.837 0 16 7.163 0 16 0z"
+                    vector-effect="non-scaling-stroke"
+                    fill-rule="nonzero"
+                    fill="#000"
+                  ></path>
+                </g>
+              </svg> </a
+            ><br />
+            <a href="#check" class="link"> Check Out </a>
+          </div>
+        </div>
+        <div id="cart" class="nav_right">
+           <div class="inner_div">
+            <a href="#" id="cart_icon">
+              <i class="fas fa-shopping-cart" ></i>
+            </a
+            ><br />
+            <a href="#check" class="link"> $0.00 </a>
+          </div>
+        </div>
+        <div id="account" class="nav_right">
+          <div class="inner_div">
+            <a href="#">
+              <svg
+                role="img"
+                focusable="false"
+                overflow="visible"
+                preserveAspectRatio="none"
+                viewBox="0 0 34 34"
+                height="32"
+                width="32"
+              >
+                <g transform="translate(1 1)">
+                  <path
+                    d="M24.278 27.291C22.836 24.128 19.628 22 16 22c-3.629 0-6.836 2.128-8.278 5.291A13.937 13.937 0 0 0 16 30c3.097 0 5.96-1.006 8.278-2.709zm1.58-1.35A13.957 13.957 0 0 0 30 16c0-7.732-6.268-14-14-14S2 8.268 2 16c0 3.887 1.584 7.404 4.142 9.94A11.11 11.11 0 0 1 16 20c4.29 0 8.01 2.411 9.858 5.94zM16 32C7.163 32 0 24.837 0 16S7.163 0 16 0s16 7.163 16 16-7.163 16-16 16zm7-20c0 3.865-3.135 7-7 7s-7-3.135-7-7 3.135-7 7-7 7 3.135 7 7zm-2 0c0-2.76-2.24-5-5-5s-5 2.24-5 5 2.24 5 5 5 5-2.24 5-5z"
+                    vector-effect="non-scaling-stroke"
+                    fill-rule="nonzero"
+                    fill="#000"
+                  ></path>
+                </g>
+              </svg> </a
+            ><br />
+            <a href="#" class="link"> Account </a>
+          </div>
+        </div>
       </div>
     </div>
+    <!-- department -->
+    <div id="department" class="content">
+      <div id="dept_left">
+        <div id="shop">
+          <a href="#"
+            ><div id="menu">
+              <div class="menu_bar"></div>
+              <div class="menu_bar"></div>
+              <div class="menu_bar"></div></div
+          ></a>
+          <a href="#" class="shop_title">Shop by Department</a>
+        </div>
+        <div id="line"></div>
+        <div id="store">
+          <a href="#"><i class="fas fa-star"></i></a>
+            <a href="#" id="store_title"> My Store: Select Store</a>
+          </div>
+        </div>
+        <div id="dept_right">
+        <div id="coupon">
+          <a href="#coupon">
+            <svg
+              role="img"
+              focusable="false"
+              overflow="visible"
+              preserveAspectRatio="none"
+              viewBox="0 0 32 32"
+              height="16"
+              width="16"
+            >
+              <g transform="translate(1 1)">
+                <path
+                  d="M16 30c7.732 0 14-6.268 14-14S23.732 2 16 2 2 8.268 2 16s6.268 14 14 14zm0 2C7.163 32 0 24.837 0 16S7.163 0 16 0s16 7.163 16 16-7.163 16-16 16zm-1.25-9.29a8.041 8.041 0 0 1-3.303-1.544 1.134 1.134 0 0 1-.447-.912c0-.62.484-1.106 1.08-1.106.317 0 .521.097.67.214 1.08.892 2.235 1.396 3.65 1.396 1.416 0 2.31-.698 2.31-1.707v-.039c0-.97-.522-1.493-2.943-2.075-2.774-.699-4.339-1.553-4.339-4.055v-.039c0-1.973 1.338-3.43 3.322-3.83V8.25a1.25 1.25 0 0 1 2.5 0v.77a6.815 6.815 0 0 1 2.763 1.146c.26.155.503.485.503.95a1.087 1.087 0 0 1-1.676.932c-1.006-.68-1.974-1.029-2.998-1.029-1.341 0-2.123.718-2.123 1.61v.04c0 1.047.596 1.513 3.11 2.133C19.585 15.501 21 16.53 21 18.78v.038c0 2.251-1.504 3.695-3.75 3.996v.714a1.25 1.25 0 0 1-2.5 0v-.817z"
+                  vector-effect="non-scaling-stroke"
+                  fill="#000"
+                  fill-rule="nonzero"
+                ></path>
+              </g>
+            </svg>
+          </a>
+          <a href="#">Kohl's Coupons</a>
+        </div>
+        <div id="coupon">
+          <a href="#coupon">
+            <svg
+              role="img"
+              focusable="false"
+              overflow="visible"
+              preserveAspectRatio="none"
+              viewBox="0 0 32 32"
+              height="16"
+              width="16"
+            >
+              <g transform="translate(1 1)">
+                <path
+                  d="M16 30c7.732 0 14-6.268 14-14S23.732 2 16 2 2 8.268 2 16s6.268 14 14 14zm0 2C7.163 32 0 24.837 0 16S7.163 0 16 0s16 7.163 16 16-7.163 16-16 16zm-1.887-8.603c0-.791.634-1.4 1.5-1.4s1.5.609 1.5 1.4v.202c0 .79-.634 1.399-1.5 1.399s-1.5-.608-1.5-1.399v-.202zm1.637-3.414c-.622 0-1.2-.374-1.25-.983v-2.386c-.07-.715.461-1.228 1.1-1.285 2.22-.16 3.478-1.066 3.536-2.726l.002-.053c.051-1.476-.925-2.539-2.62-2.598-1.248-.044-2.278.422-3.252 1.337-.243.203-.555.35-.884.339-.73-.026-1.295-.705-1.268-1.495.014-.396.17-.813.51-1.117 1.294-1.274 2.902-2.089 5.068-2.013 3.295.115 5.46 2.248 5.345 5.543l-.002.052c-.116 3.32-2.405 4.748-5.035 5.158V19c-.114.576-.628.983-1.25.983z"
+                  vector-effect="non-scaling-stroke"
+                  fill="#000"
+                  fill-rule="nonzero"
+                ></path>
+              </g>
+            </svg>
+          </a>
+          <a href="#">Help</a>
+        </div>
+      </div>
+      </div>
+    </div>
+    <!-- Explore the gift shop section -->
+    <div id="heart">
+       <a href="#">
+         <picture>
+           <source media="(max-width:800px)" srcset="https://media.kohlsimg.com/is/image/kohls/hp2-m-20211101-holidaygiftshop-bkg">
+           <img src="./images/heart.jpg">
+         </picture>
+       </a>
+    </div>
+    <!-- <div id="heart">
+      <a href="#">
+        <img src="./images/offer.jpg" alt="">
+      </a>
+    </div> -->
+    <!-- category items -->
+    <div id="category">
+      <h1>What are you shopping for today?</h1>
+      <div id="items">
+        <div id="sephora">
+          <a href="#">
+            <img
+              src="https://media.kohlsimg.com/is/image/kohls/hp2-dm-20211007-shoprail_01"
+            />
+            <p>Sephora <br />at Kohl's</p>
+          </a>
+        </div>
+        <div id="sephora">
+          <a href="#">
+            <img
+              src="https://media.kohlsimg.com/is/image/kohls/hp2-dm-20211007-shoprail_02"
+            />
+            <p>Women</p>
+          </a>
+        </div>
+        <div id="sephora">
+          <a href="#">
+            <img
+              src="https://media.kohlsimg.com/is/image/kohls/hp2-dm-20211007-shoprail_03"
+            />
+            <p>Men</p>
+          </a>
+        </div>
+        <div id="sephora">
+          <a href="#">
+            <img
+              src="https://media.kohlsimg.com/is/image/kohls/hp2-dm-20211007-shoprail_04"
+            />
+            <p>Kids</p>
+          </a>
+        </div>
+        <div id="sephora">
+          <a href="#">
+            <img
+              src="https://media.kohlsimg.com/is/image/kohls/hp2-dm-20211007-shoprail_05"
+            />
+            <p>Active</p>
+          </a>
+        </div>
+        <div id="sephora">
+          <a href="#">
+            <img
+              src="https://media.kohlsimg.com/is/image/kohls/hp2-dm-20211007-shoprail_06"
+            />
+            <p>Shoes</p>
+          </a>
+        </div>
+        <div id="sephora">
+          <a href="#">
+            <img
+              src="https://media.kohlsimg.com/is/image/kohls/hp2-dm-20211007-shoprail_07"
+            />
+            <p>Home</p>
+          </a>
+        </div>
+        <div id="sephora">
+          <a href="#">
+            <img
+              src="https://media.kohlsimg.com/is/image/kohls/hp2-dm-20211007-shoprail_08"
+            />
+            <p>Decor</p>
+          </a>
+        </div>
+      </div>
+    </div>
+    <!-- footer -->
+    <footer>
+      <div id="connect"></div>
+      <div id="details"></div>
+      <div id="info"></div>
+    </footer>
+
   </body>
 </html>
+<script src="./home.js"></script>
