--- a/Santhosh/kohls/cart_homepage.html
+++ b/Santhosh/kohls/cart_homepage.html
@@ -12,15 +12,16 @@
             border: 1px solid red;
         }
 
-        .right-side {
+        .left-side {
             background-color: white;
             width: 60%;
             height: 95%;
             border: 1px solid green;
+            display: flex;
         }
 
         
-        .right-right {
+        .product-container {
             width: 50%;
             height: 90%;
             display: block;
@@ -29,43 +30,65 @@
             border: 1px solid pink;
         }
 
-        .right-right p {
+        .product-container p {
             margin: 0px;
         }
 
-        .right-right .productName {
+        .product-container .productName {
             font-size: 10px;
         }
 
-        .pro-image {
+        .product-image {
             width: 100px;
             height: 70%;
             background-color: blue;
         }
 
+        .view-cart-container {
+            width: 20%;
+            height: 90%;
+            display: block;
+            border: 1px solid teal;
+            padding-left: 15px;
+            padding-top: 15px;
+            padding-left: 200px;
 
+        }
+
+        .cart-border {
+            width: 100px;
+            height: 100px;
+            border: 1px solid black;
+            margin-right: 20px;
+            
+        }
+        .cart-image {
+            background-color: brown;
+            width: 40%;
+            height: 50%;
+            margin: auto;
+            margin-top: 10px;
+        }
 
     </style>
 </head>
 <body>
     <div id="container">
-        <div class="right-side">
-            <div class="right-right">
-                <div class="pro-image"></div>
+        <div class="left-side">
+            <div class="product-container">
+                <div class="product-image"></div>
                 <p class="productName">Regular</p>
                 <p class="productPrice">$147.5</p>
-            <div class="right-left">
-                <img class = "cart-image"src="" alt="">
-                <p></p>
             </div>
-            </div>
-            <div class="left-left">
-                <img src="" alt="">
-                <p class="view-cart"></p>
-                <p class="number"></p>
+            <div class="view-cart-container">
+                <div class="cart-border">
+                <div class = "= cart-image"></div>
+                <p class="view-cart">View Cart</p>
+                </div>
+                <p class="number">1-1</p>
             </div>
         </div>
-        <div class="left-side"></div>
+        <div class="-side"></div>
     </div>
 </body>
 </html>
