home.html updated

--- a/home.html
+++ b/home.html
@@ -313,6 +313,41 @@
         <img src="./images/offer.jpg" alt="">
       </a>
     </div> -->
+    <!-- level of chill section -->
+    <div class="chill">
+      <div id="static_chill_div">
+        <img src="./images/chill.jpg" alt="" />
+      </div>
+      <div class="slider_right">
+        <div class="parent">
+          <div id="leftarrow" onclick="plusSlides(-1)">
+            <button>&lt;</button>
+          </div>
+          <div class="child mySlides">
+            <img src="./images/slider_2_women.jpg" alt="" />
+          </div>
+          <div class="child mySlides">
+            <img src="./images/slider_2_men.jpg" alt="" />
+          </div>
+          <div class="child mySlides">
+            <img src="./images/slider_2_kids.jpg" alt="" />
+          </div>
+          <div class="child mySlides">
+            <img src="./images/slider_2_shoes.jpg" alt="" />
+          </div>
+          <div id="rightarrow" onclick="plusSlides(1)">
+            <button>&gt;</button>
+          </div>
+        </div>
+        <div id="dot_div">
+          <span class="dot" onclick="currentSlide(1)"></span>
+          <span class="dot" onclick="currentSlide(2)"></span>
+          <span class="dot" onclick="currentSlide(3)"></span>
+          <span class="dot" onclick="currentSlide(4)"></span>
+        </div>
+      </div>
+    </div>
+
     <!-- category items -->
     <div id="category">
       <h1>What are you shopping for today?</h1>
