home.html updated

--- a/home.html
+++ b/home.html
@@ -418,6 +418,21 @@
         </div>
       </div>
     </div>
+    <!-- More for you slider_3-->
+    <p id="more_title">More for you</p>
+    <div id="more_parent">
+      <div id="more_leftarrow" onclick="morePlusSlides(-1)"></div>
+      <div class="more_child moreMySlides">
+        <img src="./images/slider_3_1.jpg" alt="1" />
+      </div>
+      <div class="more_child moreMySlides">
+        <img src="./images/slider_3_2.jpg" alt="" />
+      </div>
+      <div class="more_child moreMySlides">
+        <img src="./images/slider_3_3.jpg" alt="" />
+      </div>
+      <div id="more_rightarrow" onclick="morePlusSlides(1)"></div>
+    </div>
     <!-- clearance -->
     <a href="#home">
       <div id="clearance">
@@ -426,6 +441,20 @@
         </div>
       </div>
     </a>
+    <!-- Recently viewed slider_4-->
+    <div id="recently">
+      <div id="recently_title"><p>Recently Viewed</p></div>
+      <div id="recently_parent">
+        <div id="recently_leftarrow" onclick="recentlyPlusSlides(-1)"></div>
+        <div class="recently_child recentlyMySlides">
+          <img src="./images/slider_4_1.jpg" alt="1" />
+        </div>
+        <div class="recently_child recentlyMySlides">
+          <img src="./images/slider_4_2.jpg" alt="2" />
+        </div>
+        <div id="recently_rightarrow" onclick="recentlyPlusSlides(1)"></div>
+      </div>
+    </div>
     <!-- Get Inspired -->
     <div id="get_inspired">
       <a href="#home">
