home.html updated

--- a/home.html
+++ b/home.html
@@ -77,7 +77,9 @@
         </div>
         <form>
           <fieldset>
-            <button type="submit"><i class="fa fa-search fa-1x"></i></button>
+            <button id="search_button">
+              <i class="fa fa-search fa-1x"></i>
+            </button>
             <input
               type="text"
               placeholder=" what are you looking for today?"
@@ -454,6 +456,34 @@
         </div>
         <div id="recently_rightarrow" onclick="recentlyPlusSlides(1)"></div>
       </div>
+    </div>
+    <!-- holiday -->
+    <div id="holiday">
+      <a href="#home">
+        <div id="holiday_top">
+          <picture>
+            <img src="./images/holiday_top.jpg" />
+          </picture>
+        </div>
+        <div id="holiday_middle">
+          <div class="holiday_middle_img">
+            <img src="./images/holiday_amazonjpg.jpg" />
+          </div>
+          <div class="holiday_middle_img">
+            <img src="./images/holiday_kohli_rewards.jpg" />
+          </div>
+          <div class="holiday_middle_img">
+            <img src="./images/holiday_kohli_appjpg.jpg" />
+          </div>
+          <div class="holiday_middle_img">
+            <img src="./images/holiday_gifts.jpg" alt="" />
+          </div>
+        </div>
+        <p id="holiday_bottom">
+          Have a Kohl’s Return? <span>It's quick & hassle-free!</span
+          ><span>Learn More</span>
+        </p>
+      </a>
     </div>
     <!-- Get Inspired -->
     <div id="get_inspired">
