--- a/home.html
+++ b/home.html
@@ -550,7 +550,12 @@
             </svg>
           </a>
           <a href="https://twitter.com/kohls" target="_blank">
-            <svg xmlns="https://www.w3.org/2000/svg" width="48" height="48">
+            <svg
+              xmlns="https://www.w3.org/2000/svg"
+              width="48"
+              height="48"
+              id="twitter"
+            >
               <title>Twitter</title>
               <path
                 d="M37.038 15.955c-.956.425-1.984.71-3.063.84 1.102-.66 1.946-1.706 2.346-2.95-1.03.61-2.17 1.054-3.383 1.293-.974-1.036-2.36-1.685-3.895-1.685-2.945 0-5.333 2.39-5.333 5.334 0 .418.046.825.137 1.215-4.433-.222-8.364-2.346-10.995-5.573-.46.783-.724 1.7-.724 2.68 0 1.85.94 3.48 2.373 4.44-.876-.03-1.7-.27-2.42-.67v.067c0 2.584 1.84 4.74 4.28 5.23-.446.122-.92.187-1.404.187-.344 0-.678-.035-1.003-.097.68 2.12 2.648 3.663 4.982 3.707-1.826 1.43-4.125 2.283-6.625 2.283-.43 0-.854-.026-1.27-.075 2.36 1.514 5.164 2.396 8.176 2.396 9.812 0 15.177-8.125 15.177-15.174 0-.23-.005-.46-.016-.69 1.04-.75 1.945-1.69 2.66-2.76z"
@@ -558,7 +563,12 @@
             </svg>
           </a>
           <a href="https://www.pinterest.com/kohls/" target="_blank">
-            <svg xmlns="https://www.w3.org/2000/svg" width="48" height="48">
+            <svg
+              xmlns="https://www.w3.org/2000/svg"
+              width="48"
+              height="48"
+              id="pinterest"
+            >
               <title>Pinterest</title>
               <path
                 d="M32.243 18.003c-.65-4.74-5.383-7.156-10.42-6.59-3.993.445-7.962 3.668-8.13 8.282-.103 2.813.696 4.922 3.377 5.513 1.156-2.05-.375-2.495-.615-3.983-.982-6.078 7.007-10.224 11.19-5.982 2.9 2.943.988 11.98-3.677 11.037-4.474-.894 2.19-8.086-1.376-9.5-2.9-1.15-4.446 3.508-3.07 5.823-.803 3.983-2.54 7.733-1.837 12.73 2.28-1.656 3.047-4.827 3.677-8.13 1.15.695 1.765 1.42 3.22 1.538 5.392.41 8.4-5.382 7.66-10.736zm0 0"
@@ -566,7 +576,12 @@
             </svg>
           </a>
           <a href="https://www.instagram.com/kohls" target="_blank">
-            <svg xmlns="https://www.w3.org/2000/svg" width="48" height="48">
+            <svg
+              xmlns="https://www.w3.org/2000/svg"
+              width="48"
+              height="48"
+              id="insta"
+            >
               <title>Instagram</title>
               <path
                 d="M24 15.006c1.68 0 3.404-.076 5.078.114 2.297.26 3.655 1.846 3.833 4.11.14 1.705.09 3.43.09 5.14 0 1.635.1 3.358-.15 4.982-.68 4.506-6.21 3.646-9.55 3.645-1.59-.003-3.31.11-4.89-.192-2.32-.447-3.24-2.334-3.34-4.518-.07-1.662-.06-3.33-.05-4.994 0-1.526-.08-3.128.15-4.644.656-4.31 5.6-3.65 8.847-3.65m0-1.98c-3.84 0-8.9-.48-10.474 3.99-.542 1.54-.483 3.262-.493 4.88-.01 1.974-.04 3.955.032 5.93.08 2.177.48 4.26 2.262 5.71 1.52 1.24 3.476 1.36 5.356 1.404 2.06.05 4.12.04 6.17.01 1.74-.027 3.55-.05 5.1-.93 2.507-1.42 2.93-4.1 2.996-6.72.06-2.38.076-4.774-.015-7.15-.11-2.867-1-5.596-3.96-6.638-2.13-.75-4.75-.5-6.974-.5z"
@@ -577,7 +592,12 @@
             </svg>
           </a>
           <a href="https://www.youtube.com/kohls" target="_blank">
-            <svg xmlns="https://www.w3.org/2000/svg" width="48" height="48">
+            <svg
+              xmlns="https://www.w3.org/2000/svg"
+              width="48"
+              height="48"
+              id="youtube"
+            >
               <title>YouTube</title>
               <path
                 fill="#FFF"
