home page updated

--- a/home.html
+++ b/home.html
@@ -309,12 +309,54 @@
           <img src="./images/heart.jpg" />
         </picture>
       </a>
+      <div id="offer">
+        <ul id="offer_logos">
+          <li>
+            <a href="#offer">
+              <div id="offer_div">
+                <img src="./images/gift_1.png" />
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="#offer">
+              <div id="offer_div">
+                <img src="./images/10pe_2.png" />
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="#offer">
+              <div id="offer_div">
+                <img src="./images/20p_3.png" />
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="#offer">
+              <div id="offer_div">
+                <img src="./images/50pe_4.png" />
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="#offer">
+              <div id="offer_div">
+                <img src="./images/100pe_5.png" />
+              </div>
+            </a>
+          </li>
+        </ul>
+        <picture>
+          <img
+            src="https://media.kohlsimg.com/is/image/kohls/hp2-d-20211025-giftshop-bubbles--border"
+            class="offer_img"
+          />
+        </picture>
+        <div id="offer_green"></div>
+      </div>
     </div>
-    <!-- <div id="heart">
-      <a href="#">
-        <img src="./images/offer.jpg" alt="">
-      </a>
-    </div> -->
+
     <!-- level of chill section -->
     <div class="chill">
       <div id="static_chill_div">
@@ -419,6 +461,61 @@
           </a>
         </div>
       </div>
+    </div>
+    <!-- gift the brands -->
+    <div id="gift_box">
+      <a href="#gift" id="gift_title">
+        Gift the brands &nbsp;they're sure to love.
+      </a>
+      <ul id="gift_logos">
+        <li>
+          <a href="#gift" id="gift_img">
+            <div id="gift_img_div"><img src="./images/gift_1.png" /></div>
+          </a>
+        </li>
+        <li>
+          <a href="#gift" id="gift_img">
+            <div id="gift_img_div"><img src="./images/gift_2.png" /></div>
+          </a>
+        </li>
+        <li>
+          <a href="#gift" id="gift_img">
+            <div id="gift_img_div"><img src="./images/gift_3.png" /></div>
+          </a>
+        </li>
+        <li>
+          <a href="#gift" id="gift_img">
+            <div id="gift_img_div"><img src="./images/gift_4.png" /></div>
+          </a>
+        </li>
+        <li>
+          <a href="#gift" id="gift_img">
+            <div id="gift_img_div"><img src="./images/gift_5.png" /></div>
+          </a>
+        </li>
+        <li>
+          <a href="#gift" id="gift_img">
+            <div id="gift_img_div"><img src="./images/gift_6.png" /></div>
+          </a>
+        </li>
+        <li>
+          <a href="#gift" id="gift_img">
+            <div id="gift_img_div"><img src="./images/gift_7.png" /></div>
+          </a>
+        </li>
+        <li>
+          <a href="#gift" id="gift_img">
+            <div id="gift_img_div"><img src="./images/gift_8.png" /></div>
+          </a>
+        </li>
+      </ul>
+      <div id="gift_bg"></div>
+      <picture>
+        <img
+          src="https://media.kohlsimg.com/is/image/kohls/hp2-d-20211007-toybox-border"
+          id="gift_banner"
+        />
+      </picture>
     </div>
     <!-- More for you slider_3-->
     <p id="more_title">More for you</p>
