home.html updated

--- a/home.html
+++ b/home.html
@@ -296,6 +296,13 @@
       </div>
     </div>
     <!---------------------------------------------------header end ------------------------------------------------->
+    <div id="feedback">
+      <p>Feedback</p>
+      <img
+        src="https://www.kohls.com/onlineopinionV5/oo_tab_icon_retina.gif"
+        alt="feedback"
+      />
+    </div>
     <!-- Explore the gift shop section -->
     <div id="heart">
       <a href="#">
@@ -356,7 +363,77 @@
         <div id="offer_green"></div>
       </div>
     </div>
-
+    <!-- toy box -->
+    <div id="toy_box">
+      <div id="toy_left"></div>
+      <div id="toy_right"></div>
+      <div id="toy_banner">
+        <img src="./images/toy_banner.jpg" />
+      </div>
+    </div>
+    <!-- gift the brands -->
+    <div id="gift_box">
+      <a href="#gift" id="gift_title">
+        Gift the brands &nbsp;they're sure to love.
+      </a>
+      <ul id="gift_logos">
+        <li>
+          <a href="#gift" id="gift_img">
+            <div id="gift_img_div"><img src="./images/gift_1.png" /></div>
+          </a>
+        </li>
+        <li>
+          <a href="#gift" id="gift_img">
+            <div id="gift_img_div"><img src="./images/gift_2.png" /></div>
+          </a>
+        </li>
+        <li>
+          <a href="#gift" id="gift_img">
+            <div id="gift_img_div"><img src="./images/gift_3.png" /></div>
+          </a>
+        </li>
+        <li>
+          <a href="#gift" id="gift_img">
+            <div id="gift_img_div"><img src="./images/gift_4.png" /></div>
+          </a>
+        </li>
+        <li>
+          <a href="#gift" id="gift_img">
+            <div id="gift_img_div"><img src="./images/gift_5.png" /></div>
+          </a>
+        </li>
+        <li>
+          <a href="#gift" id="gift_img">
+            <div id="gift_img_div"><img src="./images/gift_6.png" /></div>
+          </a>
+        </li>
+        <li>
+          <a href="#gift" id="gift_img">
+            <div id="gift_img_div"><img src="./images/gift_7.png" /></div>
+          </a>
+        </li>
+        <li>
+          <a href="#gift" id="gift_img">
+            <div id="gift_img_div"><img src="./images/gift_8.png" /></div>
+          </a>
+        </li>
+      </ul>
+      <div id="gift_bg"></div>
+      <picture>
+        <img
+          src="https://media.kohlsimg.com/is/image/kohls/hp2-d-20211007-toybox-border"
+          id="gift_banner"
+        />
+      </picture>
+    </div>
+    <!-- addidas offer -->
+    <div id="adidas_box">
+      <div id="adidas_left"></div>
+      <div id="adidas_right"></div>
+      <div id="adidas_banner">
+        <img src="./images/adidas_banner.jpg" />
+      </div>
+    </div>
     <!-- level of chill section -->
     <div class="chill">
       <div id="static_chill_div">
@@ -461,61 +538,6 @@
           </a>
         </div>
       </div>
-    </div>
-    <!-- gift the brands -->
-    <div id="gift_box">
-      <a href="#gift" id="gift_title">
-        Gift the brands &nbsp;they're sure to love.
-      </a>
-      <ul id="gift_logos">
-        <li>
-          <a href="#gift" id="gift_img">
-            <div id="gift_img_div"><img src="./images/gift_1.png" /></div>
-          </a>
-        </li>
-        <li>
-          <a href="#gift" id="gift_img">
-            <div id="gift_img_div"><img src="./images/gift_2.png" /></div>
-          </a>
-        </li>
-        <li>
-          <a href="#gift" id="gift_img">
-            <div id="gift_img_div"><img src="./images/gift_3.png" /></div>
-          </a>
-        </li>
-        <li>
-          <a href="#gift" id="gift_img">
-            <div id="gift_img_div"><img src="./images/gift_4.png" /></div>
-          </a>
-        </li>
-        <li>
-          <a href="#gift" id="gift_img">
-            <div id="gift_img_div"><img src="./images/gift_5.png" /></div>
-          </a>
-        </li>
-        <li>
-          <a href="#gift" id="gift_img">
-            <div id="gift_img_div"><img src="./images/gift_6.png" /></div>
-          </a>
-        </li>
-        <li>
-          <a href="#gift" id="gift_img">
-            <div id="gift_img_div"><img src="./images/gift_7.png" /></div>
-          </a>
-        </li>
-        <li>
-          <a href="#gift" id="gift_img">
-            <div id="gift_img_div"><img src="./images/gift_8.png" /></div>
-          </a>
-        </li>
-      </ul>
-      <div id="gift_bg"></div>
-      <picture>
-        <img
-          src="https://media.kohlsimg.com/is/image/kohls/hp2-d-20211007-toybox-border"
-          id="gift_banner"
-        />
-      </picture>
     </div>
     <!-- More for you slider_3-->
     <p id="more_title">More for you</p>
