home.html updated

--- a/home.html
+++ b/home.html
@@ -296,13 +296,6 @@
       </div>
     </div>
     <!---------------------------------------------------header end ------------------------------------------------->
-    <div id="feedback">
-      <p>Feedback</p>
-      <img
-        src="https://www.kohls.com/onlineopinionV5/oo_tab_icon_retina.gif"
-        alt="feedback"
-      />
-    </div>
     <!-- Explore the gift shop section -->
     <div id="heart">
       <a href="#">
@@ -838,6 +831,13 @@
       </div>
     </footer>
     <!---------------------------------------------------footer end ------------------------------------------------->
+    <div id="last">
+      <p>Feedback</p>
+      <img
+        src="https://www.kohls.com/onlineopinionV5/oo_tab_icon_retina.gif"
+        alt="feedback"
+      />
+    </div>
   </body>
 </html>
 <script src="./home.js"></script>
