--- a/checkout.html
+++ b/checkout.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./checkout.css">
    
 </head>
 <body>
@@ -14,7 +14,7 @@
     </div>
   
 
-<div class="smart-cart-screen smart-cart-screen-empty-cart">
+<div class="smart-cart-screen-empty-cart">
     <div class="smart-cart-screen-block">
         <div class="left-column-block">
             <div class="empty-cart-left-col">
