js file updated

--- a/home.html
+++ b/home.html
@@ -147,7 +147,7 @@
           </div>
           <div class="dropdown-content">
             <button id="sign_in_button">SIGN IN</button>
-            <a href="#home">Create Account</a>
+            <a href="#home" id="create_account">Create Account</a>
             <div id="wallet" class="sub_content">
               <div class="sub_content_img">
                 <img
