--- a/additem.html
+++ b/additem.html
@@ -50,7 +50,7 @@
 
             <div class="cart-screen">
                 <div class="cart-screen-block">
-                    <div class="left-col">.
+                    <div class="left-col">
                         <div id="apply-coupon">
                             <div id="coupon-block">
                                 <span class="img-container">
