--- a/home.html
+++ b/home.html
@@ -296,6 +296,142 @@
       </div>
     </div>
     <!---------------------------------------------------header end ------------------------------------------------->
+    <!-- home sale -->
+    <div class="chill" id="home_sale">
+      <div id="static_chill_div">
+        <img src="./images/home_img/home_left.jpg" alt="" />
+      </div>
+      <div class="slider_right">
+        <div class="parent">
+          <div id="leftarrow" onclick="homePlusSlides(-1)">
+            <button>&lt;</button>
+          </div>
+          <div class="child homeMySlides">
+            <img src="./images/home_img/home_kitchen.jpg" alt="" />
+          </div>
+          <div class="child homeMySlides">
+            <img src="./images/home_img/home_decor.jpg" alt="" />
+          </div>
+          <div class="child homeMySlides">
+            <img src="./images/home_img/home_floor.jpg" alt="" />
+          </div>
+          <div class="child homeMySlides">
+            <img src="./images/home_img/home_bed.jpg" alt="" />
+          </div>
+          <div id="rightarrow" onclick="homePlusSlides(1)">
+            <button>&gt;</button>
+          </div>
+        </div>
+        <div id="dot_div">
+          <span class="dot" onclick="currentSlide(1)"></span>
+          <span class="dot" onclick="currentSlide(2)"></span>
+          <span class="dot" onclick="currentSlide(3)"></span>
+          <span class="dot" onclick="currentSlide(4)"></span>
+        </div>
+      </div>
+    </div>
+    <!-- sephora kohlis -->
+    <div class="main">
+      <div class="sephora-holiday-img">
+        <img
+          src="https://media.kohlsimg.com/is/image/kohls/hp2-d-20211111-sephora-top-bk"
+          class="holiday-img"
+        />
+      </div>
+
+      <div class="main2">
+        <div class="left">
+          <div>
+            <div>
+              <a href="#home" class="holiday-main">
+                <span style="font-weight: 500">SEPHORA</span> + Kohl's</a
+              >
+            </div>
+            <div>
+              <a href="#home" class="holiday-saving-event"
+                >Holiday Saving Event is Here!</a
+              >
+            </div>
+            <div>
+              <a href="#home" class="beauty-insider"
+                >Beauty Insiders Save Big:</a
+              >
+            </div>
+            <div class="last-div">
+              <div class="left-text">
+                <a href="#home" class="use-code">
+                  USE CODE <span style="color: red">YAYHOLIDAY</span>
+                </a>
+                <div class="apply-text">
+                  in store and online. Exclusions Apply
+                </div>
+
+                <a href="#home" class="shop-now">Shop Now</a>
+              </div>
+              <div class="right-img">
+                <a href="#home">
+                  <img
+                    src="https://media.kohlsimg.com/is/image/kohls/hp2-dm-20211105-sephora_tier_circle_01"
+                    alt="Rouge. 20% off november 5 thougth 15"
+                    class="offer-img"
+                  />
+                </a>
+                <a href="#home">
+                  <img
+                    src="https://media.kohlsimg.com/is/image/kohls/hp2-dm-20211105-sephora_tier_circle_02"
+                    alt="VIB. 15% off november 9 through 15"
+                    class="offer-img"
+                  />
+                </a>
+
+                <a href="#home">
+                  <img
+                    src="https://media.kohlsimg.com/is/image/kohls/hp2-dm-20211105-sephora_tier_circle_03"
+                    alt="Insider. 10% off november 11 through 15"
+                    class="offer-img"
+                  />
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="right">
+          <div class="right-text">
+            SEPHORA
+            <br />
+            Beauty INSIDER
+          </div>
+          <div class="right-text2">Not a Beauty Insider?</div>
+          <div class="sign-up-text">
+            <a href="" class="sign-up-text"
+              >sign up now and get 10% off <br />
+              with the code YAYHOLIDAY 11/11-11/15.</a
+            >
+          </div>
+          <div>
+            <a href="#home" class="join-now-text">join Now</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- sephora collection -->
+    <div class="main-div">
+      <div class="left-col">
+        <a href="">
+          <img src="./images/home_img/1.png" alt="" />
+        </a>
+      </div>
+      <div class="middle-col">
+        <a href="">
+          <img src="./images/home_img/2.png" alt="" />
+        </a>
+      </div>
+      <div class="right-col">
+        <a href="">
+          <img src="./images/home_img/3.png" alt="" />
+        </a>
+      </div>
+    </div>
     <!-- Explore the gift shop section -->
     <div id="heart">
       <a href="#">
@@ -528,6 +664,122 @@
               src="https://media.kohlsimg.com/is/image/kohls/hp2-dm-20211007-shoprail_08"
             />
             <p>Decor</p>
+          </a>
+        </div>
+      </div>
+    </div>
+    <!-- honoring -->
+    <div class="main-div">
+      <a href="#home">
+        <img src="./images/home_img/pic5.png" alt="" class="vetranday-img" />
+      </a>
+    </div>
+    <!-- thank you -->
+    <div class="main-div">
+      <a href="#home">
+        <img src="./images/home_img/pic7.png" alt="" class="img" />
+      </a>
+    </div>
+    <!-- pro form fit -->
+    <div class="main-div">
+      <a href="#home">
+        <img src="./images/home_img/pic6.png" alt="" class="img" />
+      </a>
+    </div>
+    <!-- favorite -->
+    <div class="main-div_fav">
+      <div class="main-div1">Find a new favourite.</div>
+      <div class="main-div2">
+        <div>
+          <div class="image">
+            <img class="image--img" src="./images/home_img/pic1.png" alt="" />
+            <div class="image--overlay">
+              <div class="image--title">TOMMY HILFIGER</div>
+            </div>
+          </div>
+
+          <a href="#home" class="text">
+            <p class="yummy">Tommy Hilfiger</p>
+          </a>
+        </div>
+
+        <div>
+          <div class="image">
+            <img class="image--img" src="./images/home_img/pic2.png" alt="" />
+            <div class="image--overlay">
+              <div class="image--title">Calvin Kelin</div>
+            </div>
+          </div>
+
+          <a href="" class="text">
+            <p class="yummy">Calvin Kelin</p>
+          </a>
+        </div>
+        <div>
+          <div class="image">
+            <img class="image--img" src="./images/home_img/pic3.png" alt="" />
+            <div class="image--overlay">
+              <div class="image--title">Eddie Bauer</div>
+            </div>
+          </div>
+
+          <a href="" class="text">
+            <p class="yummy">Eddie Bauer</p>
+          </a>
+        </div>
+        <div>
+          <div class="image">
+            <img class="image--img" src="./images/home_img/pic4.png" alt="" />
+            <div class="image--overlay">
+              <div class="image--title">Yummy Sweater Co.</div>
+            </div>
+          </div>
+
+          <a href="" class="text">
+            <p class="yummy">Yummy Sweater Co.</p>
+          </a>
+        </div>
+      </div>
+    </div>
+    <!-- outfit -->
+    <div class="main-div-fit">
+      <div class="div1">
+        <a href="#home">
+          <img src="./images/home_img/pic9.png" alt="" />
+        </a>
+      </div>
+
+      <div class="div2">
+        <a href="#home">
+          <img src="./images/home_img/pic10.png" alt="" />
+        </a>
+      </div>
+      <div class="div3">
+        <div class="fit-left-col">
+          <a href="#home">
+            <img
+              src="./images/home_img/outdoor active.png"
+              alt=""
+              class="outdoor-img"
+            />
+          </a>
+
+          <a href="#home">
+            <img
+              src="./images/home_img/go-on-the.png"
+              alt=""
+              class="go-on-img"
+            />
+          </a>
+        </div>
+
+        <div class="fit-right-col">
+          <a href="#home">
+            <img src="./images/home_img/work.png" alt="" class="work-img" />
+          </a>
+
+          <a href="#home">
+            <img src="./images/home_img/special moments.png" alt="" />
           </a>
         </div>
       </div>
