html file upated

--- a/signin.html
+++ b/signin.html
@@ -6,7 +6,7 @@
     <title>Account</title>
     <!-------------- page icon --------------->
 
-    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="men.images/favicon.ico" type="image/x-icon" />
 
     <!-- ---------css stylesheet ------------->
 
@@ -502,7 +502,7 @@
             APP
           </p>
           <div id="code">
-            <img src="./qrcode.jpg" alt="" />
+            <img src="men.images/qrcode.jpg" alt="" />
           </div>
           <div id="app_info">
             <p>
