--- a/signup.html
+++ b/signup.html
@@ -6,7 +6,7 @@
     <title>Account</title>
     <!-------------- page icon --------------->
 
-    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="men.images/favicon.ico" type="image/x-icon" />
 
     <!-- ---------css stylesheet ------------->
 
@@ -425,7 +425,7 @@
               newest styles, including all <br />
               the tips & tricks to make shopping even easier.<br />
 
-             <span id="bu0">  US Residents Only. Terms apply; see</span>
+              <span id="bu0"> US Residents Only. Terms apply; see</span>
               <a
                 id="keepmesignintext1"
                 href="https://cs.kohls.com/app/answers/detail/a_id/691/kw/sales%20alert"
@@ -551,7 +551,7 @@
             APP
           </p>
           <div id="code">
-            <img src="qrcode.jpg" alt="" />
+            <img src="men.images/qrcode.jpg" alt="" />
           </div>
           <div id="app_info">
             <p>
