mens clothing is updated

--- a/mens_clothing.html
+++ b/mens_clothing.html
@@ -6,7 +6,7 @@
     <title>Men's Clothing: Explore Clothes For Men | Kohl's</title>
     <!-------------- page icon --------------->
 
-    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="./men.images/favicon.ico" type="image/x-icon" />
 
     <!-- ---------css stylesheet ------------->
 
@@ -407,7 +407,7 @@
         <div id="box21"><h2 id="mt">Men's</h2></div>
         <div id="digitalC">
           <section class="holiday">
-            <a href="https://google.com" target=""></a>
+            <a href="product.html" target=""></a>
           </section>
           <div id="box22"><h3 id="mt">Cool looks for cooler days.</h3></div>
           <!-- <img src="maiming.png" height="200px" width="200px" alt=""> -->
@@ -427,7 +427,7 @@
           </div>
           <div id="nbox1">
             <div id="nbox">
-              <a id="acont" href="https://google.com" class="img1">
+              <a id="acont" href="product.html" class="img1">
                 <img
                   id="img1"
                   src="https://media.kohlsimg.com/is/image/kohls/Mens-dp-20211018-visnav-02?scl=1&fmt=pjpeg"
@@ -439,7 +439,7 @@
               </a>
             </div>
             <div id="nbox" class="img2">
-              <a id="acont" href="https://google.com">
+              <a id="acont" href="product.html">
                 <img
                   id="img2"
                   src="https://media.kohlsimg.com/is/image/kohls/Mens-dp-20211018-visnav-04?scl=1&fmt=pjpeg"
@@ -451,7 +451,7 @@
               </a>
             </div>
             <div id="nbox" class="img3">
-              <a id="acont" href="https://google.com">
+              <a id="acont" href="product.html">
                 <img
                   id="img3"
                   src="https://media.kohlsimg.com/is/image/kohls/Mens-dp-20211018-visnav-05?scl=1&fmt=pjpeg"
@@ -463,7 +463,7 @@
               </a>
             </div>
             <div id="nbox" class="img4">
-              <a id="acont" href="https://google.com">
+              <a id="acont" href="product.html">
                 <img
                   id="img4"
                   src="https://media.kohlsimg.com/is/image/kohls/Mens-dp-20211018-visnav-03?scl=1&fmt=pjpeg"
@@ -475,7 +475,7 @@
               </a>
             </div>
             <div id="nbox" class="img5">
-              <a id="acont" href="https://google.com">
+              <a id="acont" href="product.html">
                 <img
                   id="img5"
                   src="https://media.kohlsimg.com/is/image/kohls/Mens-dp-20211018-visnav-06?scl=1&fmt=pjpeg"
@@ -487,7 +487,7 @@
               </a>
             </div>
             <div id="nbox" class="img6">
-              <a id="acont" href="https://google.com">
+              <a id="acont" href="product.html">
                 <img
                   id="img6"
                   src="https://media.kohlsimg.com/is/image/kohls/Mens-dp-20211018-visnav-07?scl=1&fmt=pjpeg"
@@ -502,7 +502,7 @@
           <div id="box22"><h3 id="mt">Time to get festive.</h3></div>
           <div id="festive">
             <div id="nboxn" class="img6">
-              <a id="acont" href="https://google.com">
+              <a id="acont" href="product.html">
                 <img
                   id="img7"
                   src="https://media.kohlsimg.com/is/image/kohls/Mens-dp-20211018-vn-presentville?scl=1&fmt=pjpeg"
@@ -514,7 +514,7 @@
               </a>
             </div>
             <div id="nboxn" class="img6">
-              <a id="acont" href="https://google.com">
+              <a id="acont" href="product.html">
                 <img
                   id="img8"
                   src="https://media.kohlsimg.com/is/image/kohls/Mens-dp-20211018-vn-holiday-dressing?scl=1&fmt=pjpeg"
@@ -526,7 +526,7 @@
               </a>
             </div>
             <div id="nboxn" class="img6">
-              <a id="acont" href="https://google.com">
+              <a id="acont" href="product.html">
                 <img
                   id="img9"
                   src="https://media.kohlsimg.com/is/image/kohls/Mens-dp-20211018-vn-ugly-xmas?scl=1&fmt=pjpeg"
@@ -538,7 +538,7 @@
               </a>
             </div>
             <div id="nboxn" class="img6">
-              <a id="acont" href="https://google.com">
+              <a id="acont" href="product.html">
                 <img
                   id="img10"
                   src="https://media.kohlsimg.com/is/image/kohls/Mens-dp-20211018-vn-cozy?scl=1&fmt=pjpeg"
@@ -554,7 +554,7 @@
 
         <div id="digitalC">
           <section class="holiday1">
-            <a href="https://google.com" target=""></a>
+            <a href="product.html" target=""></a>
           </section>
           <div id="box22"><h3 id="mt">Find your feel-good favorites.</h3></div>
           <!-- <img src="maiming.png" height="200px" width="200px" alt=""> -->
@@ -562,7 +562,7 @@
         <div id="flexm">
           <div id="smallb">
             <div id="smallb1">
-              <a id="acont" href="https://google.com">
+              <a id="acont" href="product.html">
                 <img
                   id="img11"
                   src="https://media.kohlsimg.com/is/image/kohls/Mens-dp-20211018-vnm-shirts?scl=1&fmt=pjpeg"
@@ -574,7 +574,7 @@
               </a>
             </div>
             <div id="smallb1">
-              <a id="acont" href="https://google.com">
+              <a id="acont" href="product.html">
                 <img
                   id="img12"
                   src="https://media.kohlsimg.com/is/image/kohls/Mens-dp-20211018-vnm-shorts?scl=1&fmt=pjpeg"
@@ -586,7 +586,7 @@
               </a>
             </div>
             <div id="smallb1">
-              <a id="acont" href="https://google.com">
+              <a id="acont" href="product.html">
                 <img
                   id="img13"
                   src="https://media.kohlsimg.com/is/image/kohls/Mens-dp-20211018-vnm-sweaters?scl=1&fmt=pjpeg"
@@ -598,7 +598,7 @@
               </a>
             </div>
             <div id="smallb1">
-              <a id="acont" href="https://google.com">
+              <a id="acont" href="product.html">
                 <img
                   id="img14"
                   src="https://media.kohlsimg.com/is/image/kohls/Mens-dp-20211018-vnm-underwear?scl=1&fmt=pjpeg"
@@ -610,7 +610,7 @@
               </a>
             </div>
             <div id="smallb1">
-              <a id="acont" href="https://google.com">
+              <a id="acont" href="product.html">
                 <img
                   id="img15"
                   src="https://media.kohlsimg.com/is/image/kohls/Mens-dp-20211018-vnm-accessories?scl=1&fmt=pjpeg"
@@ -622,7 +622,7 @@
               </a>
             </div>
             <div id="smallb1">
-              <a id="acont" href="https://google.com">
+              <a id="acont" href="product.html">
                 <img
                   id="img16"
                   src="https://media.kohlsimg.com/is/image/kohls/Mens-dp-20211018-vnm-golf?scl=1&fmt=pjpeg"
@@ -648,7 +648,7 @@
           </div>
           <div id="festive">
             <div id="nboxn" class="img6">
-              <a id="acont" href="https://google.com">
+              <a id="acont" href="product.html">
                 <img
                   id="img18"
                   src="https://media.kohlsimg.com/is/image/kohls/Mens-dp-20211018-vnm-dress?scl=1&fmt=pjpeg"
@@ -660,7 +660,7 @@
               </a>
             </div>
             <div id="nboxn" class="img6">
-              <a id="acont" href="https://google.com">
+              <a id="acont" href="product.html">
                 <img
                   id="img19"
                   src="https://media.kohlsimg.com/is/image/kohls/Mens-dp-20211018-vnm-sports?scl=1&fmt=pjpeg"
@@ -672,7 +672,7 @@
               </a>
             </div>
             <div id="nboxn" class="img6">
-              <a id="acont" href="https://google.com">
+              <a id="acont" href="product.html">
                 <img
                   id="img20"
                   src="https://media.kohlsimg.com/is/image/kohls/Mens-dp-20211018-vnm-outdoor?scl=1&fmt=pjpeg"
@@ -684,7 +684,7 @@
               </a>
             </div>
             <div id="nboxn" class="img6">
-              <a id="acont" href="https://google.com">
+              <a id="acont" href="product.html">
                 <img
                   id="img21"
                   src="https://media.kohlsimg.com/is/image/kohls/Mens-dp-20211018-vnm-shoes?scl=1&fmt=pjpeg"
@@ -697,7 +697,7 @@
             </div>
           </div>
 
-          <a id="ban" href=" https://google.com">
+          <a id="ban" href=" product.html">
             <p id="text01">
               <span class="text01">CLEARANCE</span><br />
               More sizes and styles available in store.
@@ -708,16 +708,16 @@
           <div id="recently_parent">
             <div id="recently_leftarrow" onclick="plusSlides(-1)"></div>
             <div class="recently_child recentlyMySlides">
-              <img src="1.jpg" alt="1" />
+              <img src="men.images/1.jpg" alt="1" />
             </div>
             <div class="recently_child recentlyMySlides">
-              <img src="2.jpg" alt="2" />
+              <img src="./men.images/2.jpg" alt="2" />
             </div>
             <div class="recently_child recentlyMySlides">
-              <img src="3.jpg" alt="3" />
+              <img src="./men.images/3.jpg" alt="3" />
             </div>
             <div class="recently_child recentlyMySlides">
-              <img src="4.jpg" alt="4" />
+              <img src="./men.images/4.jpg" alt="4" />
             </div>
             <div id="recently_rightarrow" onclick="plusSlides(1)"></div>
           </div>
@@ -860,7 +860,7 @@
             APP
           </p>
           <div id="code">
-            <img src="qrcode.jpg" alt="" />
+            <img src="men.images/qrcode.jpg" alt="" />
           </div>
           <div id="app_info">
             <p>
