home page updated

--- a/home.html
+++ b/home.html
@@ -603,7 +603,7 @@
       <h1>What are you shopping for today?</h1>
       <div id="items">
         <div id="sephora">
-          <a href="#">
+          <a href="./mens_clothing.html">
             <img
               src="https://media.kohlsimg.com/is/image/kohls/hp2-dm-20211007-shoprail_01"
             />
@@ -611,7 +611,7 @@
           </a>
         </div>
         <div id="sephora">
-          <a href="#">
+          <a href="./mens_clothing.html">
             <img
               src="https://media.kohlsimg.com/is/image/kohls/hp2-dm-20211007-shoprail_02"
             />
@@ -619,7 +619,7 @@
           </a>
         </div>
         <div id="sephora">
-          <a href="#">
+          <a href="./mens_clothing.html">
             <img
               src="https://media.kohlsimg.com/is/image/kohls/hp2-dm-20211007-shoprail_03"
             />
@@ -627,7 +627,7 @@
           </a>
         </div>
         <div id="sephora">
-          <a href="#">
+          <a href="./mens_clothing.html">
             <img
               src="https://media.kohlsimg.com/is/image/kohls/hp2-dm-20211007-shoprail_04"
             />
@@ -635,7 +635,7 @@
           </a>
         </div>
         <div id="sephora">
-          <a href="#">
+          <a href="./mens_clothing.html">
             <img
               src="https://media.kohlsimg.com/is/image/kohls/hp2-dm-20211007-shoprail_05"
             />
@@ -643,7 +643,7 @@
           </a>
         </div>
         <div id="sephora">
-          <a href="#">
+          <a href="./mens_clothing.html">
             <img
               src="https://media.kohlsimg.com/is/image/kohls/hp2-dm-20211007-shoprail_06"
             />
@@ -651,7 +651,7 @@
           </a>
         </div>
         <div id="sephora">
-          <a href="#">
+          <a href="./mens_clothing.html">
             <img
               src="https://media.kohlsimg.com/is/image/kohls/hp2-dm-20211007-shoprail_07"
             />
@@ -659,7 +659,7 @@
           </a>
         </div>
         <div id="sephora">
-          <a href="#">
+          <a href="./mens_clothing.html">
             <img
               src="https://media.kohlsimg.com/is/image/kohls/hp2-dm-20211007-shoprail_08"
             />
