home is updated

--- a/product.html
+++ b/product.html
@@ -120,7 +120,7 @@
         </div>
         <div id="cart" class="nav_right">
           <div class="inner_div">
-            <a href="#" id="cart_icon"> <i class="fas fa-shopping-cart"></i> </a
+            <a href="cart.html" id="cart_icon"> <i class="fas fa-shopping-cart"></i> </a
             ><br />
             <a href="#check" class="link"> $0.00 </a>
           </div>
