--- a/home.html
+++ b/home.html
@@ -143,7 +143,7 @@
                 </g>
               </svg> </a
             ><br />
-            <a href="#" class="link"> Account </a>
+            <a href="#" class="link" id="user_name"></a>
           </div>
           <div class="dropdown-content">
             <button id="sign_in_button">SIGN IN</button>
