home page updated

--- a/signup.html
+++ b/signup.html
@@ -28,12 +28,6 @@
       href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css"
       rel="stylesheet"
     />
-    <style>
-      /* #cont{
-            display: inline-block;
-            width: 70%;
-        } */
-    </style>
   </head>
   <body>
     <!---------------------------------------------------header start ------------------------------------------------->
@@ -150,7 +144,7 @@
                 </g>
               </svg> </a
             ><br />
-            <a href="#" class="link"> Account </a>
+            <a href="#" class="link" id="user_name"> </a>
           </div>
           <div class="dropdown-content">
             <button id="sign_in_button">SIGN IN</button>
