des.html updated

--- a/description.html
+++ b/description.html
@@ -333,7 +333,7 @@
     <div class="right"></div>
 </div>
 <!-- description footer starts -->
- <div id="sbsn"></div>
+ <div id="sbsn"><img src="./ns11.png" alt=""></div>
  <div id="ftn">STYLE IT YOUR WAY</div>
 
            <div id="nc">
